character.statistics, CR calculation
